# sdl_game

./: .gitmodules  CMakeLists.txt  compile.sh  main.cpp  your_program
src/: CMakeLists.txt
src/sdl/: color.cpp  color_range.cpp  input.cpp  rect.cpp  texture.cpp  utils.cpp  utils.hpp
src/utils/: string_utils.cpp  string_utils.hpp
